--- a/Activitat 3 -Taules + CSS.html
+++ b/Activitat 3 -Taules + CSS.html
@@ -16,6 +16,7 @@ h2 {
 </style>
 </head>
 <body>
+    <!-- Taules amb CSS -->
     <H1> Notícies ITIC</H1>
     <h2>45 walkie talkies, 112 tobogans i un jacuzzi: la compra d'un nen de 5 anys a Amazon</h2>
     
